# midas-journal-303

Normal/: CMakeLists.txt
Normal/data/: sphere.vtk
Normal/doc/: normal.bib  normal.tex
Normal/example/: CMakeLists.txt  NormalFilter.cxx
Normal/src/: itkCross.h  itkQENormalFilter.h  itkQENormalFilter.txx  itkQuadEdgeMeshExtendedTraits.h  itkTriangle.h  itkTriangle.txx
